remove html tag

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -76,6 +76,7 @@ article a {
 }
 
 .blog-body {
+	font-family: "Merriweather",georgia,serif;
 	font-size: 2rem;
 	margin-bottom: 2em;
 	margin: 1em 0px;
